--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,55 @@
 .container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 25% 1fr;
-    grid-template-rows: auto 1fr auto;
-    grid-template-areas: 
+  width: 100%;
+  display: grid;
+  grid-template-columns: 25% 1fr;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas:
     "nav-element content-element"
     "nav-element foot-element";
 }
 
 @media (max-width: 600px) {
-    .container {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto 1fr auto;
-        grid-template-areas: 
-        "nav-element "
-        "content-element"
-        "foot-element";
-        }
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+      "nav-element "
+      "content-element"
+      "foot-element";
+  }
 }
 
 #navbar {
-    background-color: rgba(30, 144, 255, 0.35);
-    grid-area: nav-element;
+  background-color: rgba(30, 144, 255, 0.35);
+  grid-area: nav-element;
 }
 
 main {
-    grid-area: content-element;
+  grid-area: content-element;
 }
 footer {
-    grid-area: foot-element;
+  grid-area: foot-element;
+}
+
+header {
+  font-weight: bold;
+  font-size: 1.5 em;
+  padding: 5px;
+  margin: 10px;
+}
+
+a {
+  color: blueviolet;
+  padding: 3px;
+  font-size: 1.2 em;
+}
+
+p {
+  padding: 10px;
+  margin: 10px;
+}
+
+h1 {
+  padding: 10px;
+  margin: 10px;
 }
