--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
+body {
+    margin: 0px;
+    padding: 0px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .container {
   width: 100%;
   display: grid;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   grid-template-columns: 25% 1fr;
   grid-template-rows: auto 1fr auto;
   grid-template-areas:
@@ -22,6 +29,7 @@
 #navbar {
   background-color: rgba(30, 144, 255, 0.35);
   grid-area: nav-element;
+  padding-left: 8px;
 }
 
 main {
@@ -41,7 +49,9 @@ header {
 a {
   color: blueviolet;
   padding: 3px;
-  font-size: 1.2 em;
+  font-size: 4 em;
+  margin-bottom: 3px solid black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 p {
@@ -52,4 +62,9 @@ p {
 h1 {
   padding: 10px;
   margin: 10px;
+}
+code {
+    background-color: rgba(128, 128, 128, 0.5);
+    padding: 2px;
+
 }
